fixes fixed element covering links in header

--- a/app/apps/themes/benji/assets/css/header.scss
+++ b/app/apps/themes/benji/assets/css/header.scss
@@ -36,7 +36,7 @@ header {
   width: 100%;
   position: fixed;
   padding-top: 2.25rem;
-  z-index: 100;
+  z-index: 90;
 }
 .header-nav {
   @include center($medium);
@@ -93,5 +93,5 @@ nav {
   }
 }
 .img-responsive {
-  max-width: 7.5rem; 
+  max-width: 7.5rem;
 }
